--- a/analysis/comparing_differnt_settings_ldmm.Rmd
+++ b/analysis/comparing_differnt_settings_ldmm.Rmd
@@ -374,18 +374,18 @@ df_summary <- rbind(df_summary,tmp)
 ```
 
 
-```{r warning=F,message=F, fig.height=5, fig.width=20}
-gene_weird <- finemap_res_gene_origin[abs(finemap_res_gene_origin$z)< 1 & finemap_res_gene_origin$susie_pip > 0.3,]$id
-gene_weird_ldmismatch <- finemap_res_gene_ldmismatch[finemap_res_gene_ldmismatch$id %in% gene_weird,]
+<!-- ```{r warning=F,message=F, fig.height=5, fig.width=20} -->
+<!-- gene_weird <- finemap_res_gene_origin[abs(finemap_res_gene_origin$z)< 1 & finemap_res_gene_origin$susie_pip > 0.3,]$id -->
+<!-- gene_weird_ldmismatch <- finemap_res_gene_ldmismatch[finemap_res_gene_ldmismatch$id %in% gene_weird,] -->
 
 
-prob_gene <- finemap_res_gene_origin[finemap_res_gene_origin$id %in% problematic_genes,]
+<!-- prob_gene <- finemap_res_gene_origin[finemap_res_gene_origin$id %in% problematic_genes,] -->
 
-DT::datatable(gene_weird_ldmismatch,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Gene disappeared'),options = list(pageLength = 10) )
+<!-- DT::datatable(gene_weird_ldmismatch,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Gene disappeared'),options = list(pageLength = 10) ) -->
 
-DT::datatable(prob_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Problematic genes'),options = list(pageLength = 10) )
+<!-- DT::datatable(prob_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Problematic genes'),options = list(pageLength = 10) ) -->
 
-```
+<!-- ``` -->
 
 
 ### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.2, SNP p_diff = 5e-4
@@ -831,18 +831,18 @@ df_summary <- rbind(df_summary,tmp)
 ```
 
 
-```{r warning=F,message=F, fig.height=5, fig.width=20}
-gene_weird <- finemap_res_gene_origin[abs(finemap_res_gene_origin$z)< 1 & finemap_res_gene_origin$susie_pip > 0.3,]$id
-gene_weird_ldmismatch <- finemap_res_gene_ldmismatch[finemap_res_gene_ldmismatch$id %in% gene_weird,]
+<!-- ```{r warning=F,message=F, fig.height=5, fig.width=20} -->
+<!-- gene_weird <- finemap_res_gene_origin[abs(finemap_res_gene_origin$z)< 1 & finemap_res_gene_origin$susie_pip > 0.3,]$id -->
+<!-- gene_weird_ldmismatch <- finemap_res_gene_ldmismatch[finemap_res_gene_ldmismatch$id %in% gene_weird,] -->
 
 
-prob_gene <- finemap_res_gene_origin[finemap_res_gene_origin$id %in% problematic_genes,]
+<!-- prob_gene <- finemap_res_gene_origin[finemap_res_gene_origin$id %in% problematic_genes,] -->
 
-DT::datatable(gene_weird_ldmismatch,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Gene disappeared'),options = list(pageLength = 10) )
+<!-- DT::datatable(gene_weird_ldmismatch,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Gene disappeared'),options = list(pageLength = 10) ) -->
 
-DT::datatable(prob_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Problematic genes'),options = list(pageLength = 10) )
+<!-- DT::datatable(prob_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Problematic genes'),options = list(pageLength = 10) ) -->
 
-```
+<!-- ``` -->
 
 
 ### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.2, SNP p_diff = 5e-4
